[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scenes/Components/PlanetList/SinglePlanetDisplay.gd" type="Script" id=1]
[ext_resource path="res://Materials/Tint.tres" type="CanvasItemMaterial" id=2]
[ext_resource path="res://Images/Races/Flags/raceflag.ascshp_000.png" type="Texture" id=3]
[ext_resource path="res://Images/Screens/Battle/Suns/11_blue_dwarf.png" type="Texture" id=4]
[ext_resource path="res://Images/Screens/Battle/Planets/planets.ascshp_000.png" type="Texture" id=5]
[ext_resource path="res://Images/Screens/Planet/Research/00.png" type="Texture" id=6]
[ext_resource path="res://Images/Screens/Planet/Industry/01.png" type="Texture" id=7]
[ext_resource path="res://Images/Screens/Planet/Prosperity/01.png" type="Texture" id=8]

[node name="SinglePlanetDisplay" type="Control"]

rect/min_size = Vector2( 610, 124 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 610.0
margin/bottom = 124.0
script/script = ExtResource( 1 )

[node name="Anchor" type="Position2D" parent="."]

[node name="FlagAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 5, 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Flag" type="TextureFrame" parent="FlagAnchor"]

material/material = ExtResource( 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="SunAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sun" type="TextureFrame" parent="SunAnchor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="PlanetAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 151, 26 )
__meta__ = {
"_edit_group_": true
}

[node name="Planet" type="TextureFrame" parent="PlanetAnchor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="ResearchAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 281, 61 )
__meta__ = {
"_edit_group_": true
}

[node name="Research" type="TextureFrame" parent="ResearchAnchor"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="IndustryAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 351, 61 )
__meta__ = {
"_edit_group_": true
}

[node name="Industry" type="TextureFrame" parent="IndustryAnchor"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="ProsperityAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 421, 61 )
__meta__ = {
"_edit_group_": true
}

[node name="Prosperity" type="TextureFrame" parent="ProsperityAnchor"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="WorkersAnchor" type="Position2D" parent="."]

transform/pos = Vector2( 491, 61 )
__meta__ = {
"_edit_group_": true
}

[node name="SystemName" type="Label" parent="."]

material/material = ExtResource( 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 123.0
margin/top = 16.0
margin/right = 163.0
margin/bottom = 30.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 14.0
margin/right = 615.0
margin/bottom = 35.0
alignment = 0

[node name="PlanetName" type="Label" parent="HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 34.0
margin/bottom = 17.0
text = "Place"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlanetDesc" type="Label" parent="HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 38.0
margin/top = 3.0
margin/right = 81.0
margin/bottom = 17.0
text = "Holder"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Project" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 276.0
margin/top = 34.0
margin/right = 343.0
margin/bottom = 48.0
text = "No Project"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SystemButton" type="TextureButton" parent="."]

hint/tooltip = "View System"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 153.0
margin/bottom = 124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="PlanetButton" type="TextureButton" parent="."]

hint/tooltip = "View Planet"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 153.0
margin/top = 0.0
margin/right = 615.0
margin/bottom = 124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}


